--- a/Matrices/Project-Basketball Trends.ipynb
+++ b/Matrices/Project-Basketball Trends.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "391d9fb1",
    "metadata": {},
    "outputs": [],
@@ -26,6 +26,7 @@
     "# Lists:\n",
     "# - Players\n",
     "# - Seasons\n",
+    "\n",
     "# Dictionaries:\n",
     "# - Sdict\n",
     "# - Pdict\n",
@@ -113,7 +114,7 @@
     "DwayneWade_FG = [699,472,439,854,719,692,416,569,415,509]\n",
     "\n",
     "#Matrix\n",
-    "FieldGoals  = np.array([KobeBryant_FG, JoeJohnson_FG, LeBronJames_FG, CarmeloAnthony_FG, DwightHoward_FG, ChrisBosh_FG, ChrisPaul_FG, KevinDurant_FG, DerrickRose_FG, DwayneWade_FG])\n",
+    "FieldGoals = np.array([KobeBryant_FG, JoeJohnson_FG, LeBronJames_FG, CarmeloAnthony_FG, DwightHoward_FG, ChrisBosh_FG, ChrisPaul_FG, KevinDurant_FG, DerrickRose_FG, DwayneWade_FG])\n",
     "\n",
     "#Field Goal Attempts\n",
     "KobeBryant_FGA = [2173,1757,1690,1712,1569,1639,1336,1595,73,713]\n",
@@ -148,39 +149,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "id": "9d91647a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[15946875, 17718750, 19490625, 21262500, 23034375, 24806250,\n",
+       "        25244493, 27849149, 30453805, 23500000],\n",
+       "       [12000000, 12744189, 13488377, 14232567, 14976754, 16324500,\n",
+       "        18038573, 19752645, 21466718, 23180790],\n",
+       "       [ 4621800,  5828090, 13041250, 14410581, 15779912, 14500000,\n",
+       "        16022500, 17545000, 19067500, 20644400],\n",
+       "       [ 3713640,  4694041, 13041250, 14410581, 15779912, 17149243,\n",
+       "        18518574, 19450000, 22407474, 22458000],\n",
+       "       [ 4493160,  4806720,  6061274, 13758000, 15202590, 16647180,\n",
+       "        18091770, 19536360, 20513178, 21436271],\n",
+       "       [ 3348000,  4235220, 12455000, 14410581, 15779912, 14500000,\n",
+       "        16022500, 17545000, 19067500, 20644400],\n",
+       "       [ 3144240,  3380160,  3615960,  4574189, 13520500, 14940153,\n",
+       "        16359805, 17779458, 18668431, 20068563],\n",
+       "       [       0,        0,  4171200,  4484040,  4796880,  6053663,\n",
+       "        15506632, 16669630, 17832627, 18995624],\n",
+       "       [       0,        0,        0,  4822800,  5184480,  5546160,\n",
+       "         6993708, 16402500, 17632688, 18862875],\n",
+       "       [ 3031920,  3841443, 13041250, 14410581, 15779912, 14200000,\n",
+       "        15691000, 17182000, 18673000, 15000000]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Salary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3c5ef380",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[15946875 17718750 19490625 21262500 23034375 24806250 25244493 27849149\n",
-      "  30453805 23500000]\n",
-      " [12000000 12744189 13488377 14232567 14976754 16324500 18038573 19752645\n",
-      "  21466718 23180790]\n",
-      " [ 4621800  5828090 13041250 14410581 15779912 14500000 16022500 17545000\n",
-      "  19067500 20644400]\n",
-      " [ 3713640  4694041 13041250 14410581 15779912 17149243 18518574 19450000\n",
-      "  22407474 22458000]\n",
-      " [ 4493160  4806720  6061274 13758000 15202590 16647180 18091770 19536360\n",
-      "  20513178 21436271]\n",
-      " [ 3348000  4235220 12455000 14410581 15779912 14500000 16022500 17545000\n",
-      "  19067500 20644400]\n",
-      " [ 3144240  3380160  3615960  4574189 13520500 14940153 16359805 17779458\n",
-      "  18668431 20068563]\n",
-      " [       0        0  4171200  4484040  4796880  6053663 15506632 16669630\n",
-      "  17832627 18995624]\n",
-      " [       0        0        0  4822800  5184480  5546160  6993708 16402500\n",
-      "  17632688 18862875]\n",
-      " [ 3031920  3841443 13041250 14410581 15779912 14200000 15691000 17182000\n",
-      "  18673000 15000000]]\n"
+      "[[80 77 82 82 73 82 58 78  6 35]\n",
+      " [82 57 82 79 76 72 60 72 79 80]\n",
+      " [79 78 75 81 76 79 62 76 77 69]\n",
+      " [80 65 77 66 69 77 55 67 77 40]\n",
+      " [82 82 82 79 82 78 54 76 71 41]\n",
+      " [70 69 67 77 70 77 57 74 79 44]\n",
+      " [78 64 80 78 45 80 60 70 62 82]\n",
+      " [35 35 80 74 82 78 66 81 81 27]\n",
+      " [40 40 40 81 78 81 39  0 10 51]\n",
+      " [75 51 51 79 77 76 49 69 54 62]]\n"
      ]
     }
    ],
    "source": [
-    "print(Salary)"
+    "print(Games)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4cf5f08e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2832 2430 2323 2201 1970 2078 1616 2133   83  782]\n",
+      " [1653 1426 1779 1688 1619 1312 1129 1170 1245 1154]\n",
+      " [2478 2132 2250 2304 2258 2111 1683 2036 2089 1743]\n",
+      " [2122 1881 1978 1504 1943 1970 1245 1920 2112  966]\n",
+      " [1292 1443 1695 1624 1503 1784 1113 1296 1297  646]\n",
+      " [1572 1561 1496 1746 1678 1438 1025 1232 1281  928]\n",
+      " [1258 1104 1684 1781  841 1268 1189 1186 1185 1564]\n",
+      " [ 903  903 1624 1871 2472 2161 1850 2280 2593  686]\n",
+      " [ 597  597  597 1361 1619 2026  852    0  159  904]\n",
+      " [2040 1397 1254 2386 2045 1941 1082 1463 1028 1331]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Points)"
    ]
   },
   {
@@ -188,7 +246,481 @@
    "id": "0409f897",
    "metadata": {},
    "source": [
-    "----"
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "29334a45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "e97e9240",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([80, 77, 82, 82, 73, 82, 58, 78,  6, 35])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Games[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c7f42b9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([79, 78, 75, 81, 76, 79, 62, 76, 77, 69])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Games[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2413a73c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "69"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Games[2][9] # similar to [2,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "59e14df4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1258, 1104, 1684, 1781,  841, 1268, 1189, 1186, 1185, 1564])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Points[6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "92194ed2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1104"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Points[6,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8b442f7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------- Dictionaries --------------------- #"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "77b18e60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([80, 77, 82, 82, 73, 82, 58, 78,  6, 35])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pdict['KobeBryant'] # to know the position of the player\n",
+    "Games[Pdict['KobeBryant']] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e4772d4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([40, 40, 40, 81, 78, 81, 39,  0, 10, 51])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Pdict['DerrickRose']\n",
+    "Games[8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9498fee6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Sdict['2012']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6a3bdcbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1653, 1426, 1779, 1688, 1619, 1312, 1129, 1170, 1245, 1154])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Points[Pdict['JoeJohnson']] # Total points of Joe Johnson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "de1e1f90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1170"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Points[Pdict['JoeJohnson'], Sdict['2012']] # Total points of Joe Johnson During 2012"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "59582bb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[12000000 12744189 13488377 14232567 14976754 16324500 18038573 19752645\n",
+      " 21466718 23180790]\n"
+     ]
+    }
+   ],
+   "source": [
+    "JJ_totsal = Salary[Pdict['JoeJohnson']]\n",
+    "print(JJ_totsal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "fe100024",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "166205113\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_salary_JJ = 0\n",
+    " \n",
+    "for i in range(0, len(JJ_totsal)):\n",
+    "    total_salary_JJ = total_salary_JJ + JJ_totsal[i]\n",
+    " \n",
+    "print(total_salary_JJ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "55eab6e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------------------------------------ #"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "e3e36cf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Matrix Operations:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "51024ea1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Salary of LBJ -> Salary[][]\n",
+    "\n",
+    "print(Pdict[\"LeBronJames\"])\n",
+    "print(Sdict[\"2009\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "ad412cfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15779912"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Salary[2,4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "c9459b5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[978, 813, 775, 800, 716, 740, 574, 738,  31, 266],\n",
+       "       [632, 536, 647, 620, 635, 514, 423, 445, 462, 446],\n",
+       "       [875, 772, 794, 789, 768, 758, 621, 765, 767, 624],\n",
+       "       [756, 691, 728, 535, 688, 684, 441, 669, 743, 358],\n",
+       "       [468, 526, 583, 560, 510, 619, 416, 470, 473, 251],\n",
+       "       [549, 543, 507, 615, 600, 524, 393, 485, 492, 343],\n",
+       "       [407, 381, 630, 631, 314, 430, 425, 412, 406, 568],\n",
+       "       [306, 306, 587, 661, 794, 711, 643, 731, 849, 238],\n",
+       "       [208, 208, 208, 574, 672, 711, 302,   0,  58, 338],\n",
+       "       [699, 472, 439, 854, 719, 692, 416, 569, 415, 509]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FieldGoals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "42b0d4bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[80, 77, 82, 82, 73, 82, 58, 78,  6, 35],\n",
+       "       [82, 57, 82, 79, 76, 72, 60, 72, 79, 80],\n",
+       "       [79, 78, 75, 81, 76, 79, 62, 76, 77, 69],\n",
+       "       [80, 65, 77, 66, 69, 77, 55, 67, 77, 40],\n",
+       "       [82, 82, 82, 79, 82, 78, 54, 76, 71, 41],\n",
+       "       [70, 69, 67, 77, 70, 77, 57, 74, 79, 44],\n",
+       "       [78, 64, 80, 78, 45, 80, 60, 70, 62, 82],\n",
+       "       [35, 35, 80, 74, 82, 78, 66, 81, 81, 27],\n",
+       "       [40, 40, 40, 81, 78, 81, 39,  0, 10, 51],\n",
+       "       [75, 51, 51, 79, 77, 76, 49, 69, 54, 62]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Games"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "6d7d4021",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[12., 11.,  9., 10., 10.,  9., 10.,  9.,  5.,  8.],\n",
+       "       [ 8.,  9.,  8.,  8.,  8.,  7.,  7.,  6.,  6.,  6.],\n",
+       "       [11., 10., 11., 10., 10., 10., 10., 10., 10.,  9.],\n",
+       "       [ 9., 11.,  9.,  8., 10.,  9.,  8., 10., 10.,  9.],\n",
+       "       [ 6.,  6.,  7.,  7.,  6.,  8.,  8.,  6.,  7.,  6.],\n",
+       "       [ 8.,  8.,  8.,  8.,  9.,  7.,  7.,  7.,  6.,  8.],\n",
+       "       [ 5.,  6.,  8.,  8.,  7.,  5.,  7.,  6.,  7.,  7.],\n",
+       "       [ 9.,  9.,  7.,  9., 10.,  9., 10.,  9., 10.,  9.],\n",
+       "       [ 5.,  5.,  5.,  7.,  9.,  9.,  8., nan,  6.,  7.],\n",
+       "       [ 9.,  9.,  9., 11.,  9.,  9.,  8.,  8.,  8.,  8.]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# average goals per game:\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore') # Used for removing warnings of divide by zero\n",
+    "\n",
+    "Average_Goals_Per_Game = np.matrix.round(FieldGoals / Games) # Without rounding the digits will get warnings\n",
+    "Average_Goals_Per_Game"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "c7731f38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[41., 41., 39., 36., 39., 34., 38., 39., 30., 34.],\n",
+       "       [41., 41., 41., 40., 38., 35., 35., 37., 33., 35.],\n",
+       "       [43., 41., 40., 38., 39., 39., 38., 38., 38., 36.],\n",
+       "       [37., 38., 36., 34., 38., 36., 34., 37., 39., 36.],\n",
+       "       [37., 37., 38., 36., 35., 38., 38., 36., 34., 30.],\n",
+       "       [39., 39., 36., 38., 36., 36., 35., 33., 32., 35.],\n",
+       "       [36., 37., 38., 38., 38., 36., 36., 33., 35., 35.],\n",
+       "       [36., 36., 35., 39., 40., 39., 39., 39., 39., 34.],\n",
+       "       [29., 29., 29., 37., 37., 37., 35., nan, 31., 30.],\n",
+       "       [39., 38., 38., 39., 36., 37., 33., 35., 33., 32.]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Average minutes played:\n",
+    "\n",
+    "Minutes_played_avg = np.matrix.round(MinutesPlayed / Games)\n",
+    "Minutes_played_avg"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf2dc323",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   }
  ],
